Mapview/Mapbox Updates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,14 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCQngvyO-4D1v2UINS0sGzovi5JNbEfloo" />
 
-        <activity android:name=".GoogleSignInActivity">
-
+        <activity
+            android:name=".GoogleSignInActivity">
         </activity>
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
