--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.mapbox.mapboxsdk:mapbox-android-plugin-cluster-utils:0.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
